# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: base.py  cli.py  engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: all_brain_games.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
src/: __main__.py  base.py  cli.py  helpers.py
src/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
