[tool.poetry]
name = "hexlet-code"
version = "0.1.4"
description = "Brain games project on hexlet"
authors = ["Aleksandr <Sashkakonowawka4@gmail.com>"]
repository = "https://github.com/a1723/python-project-lvl1"
packages = [
  { include = "brain_games" },
]

classifiers = [
    "Topic :: Education"
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.all_brain_games:main"

